--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -60,3 +60,34 @@ hr{
 	border-color: #dddddd;
 }
 
+/* photo upload css*/
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
+}
+
+#img-upload{
+    width: 50%;
+    height: 50%;
+}
+/* end*/
+
+#profilePicture{
+	width: 50%;
+	height: 50%;
+}
